# one_billion_rows_challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: convert_to_parquet.py  create_measurements.py  using_dask.py  using_duckdb.py  using_duckdb_parquet.py  using_pandas.py  using_polars.py  using_python.py
